Header and footer site wide: Moved page SASS files to new structure, updated bundle. Moved styles to shared components.  Updated controller and view model.

--- a/src/IAmBacon/IAmBacon/Content/sass/base/_base.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/_base.scss
@@ -9,9 +9,7 @@
 
 // Variables
 // ------------------------
-@import "colours";
-@import "typography";
-@import "grid";
+@import "variables";
 $ie-only: false !default;
 
 // Reset
