--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home.css
@@ -434,19 +434,19 @@ th {
   padding: 0;
 }
 
-/* line 31, ../../../sass/base/_base.scss */
+/* line 29, ../../../sass/base/_base.scss */
 ul,
 ol {
   list-style-type: none;
 }
 
-/* line 36, ../../../sass/base/_base.scss */
+/* line 34, ../../../sass/base/_base.scss */
 ul,
 ol {
   padding: 0;
 }
 
-/* line 46, ../../../sass/base/_base.scss */
+/* line 44, ../../../sass/base/_base.scss */
 ul,
 ol,
 h2,
@@ -457,29 +457,29 @@ dd {
   margin: 0;
 }
 
-/* line 50, ../../../sass/base/_base.scss */
+/* line 48, ../../../sass/base/_base.scss */
 a {
   text-decoration: none;
   color: inherit;
 }
 
-/* line 56, ../../../sass/base/_base.scss */
+/* line 54, ../../../sass/base/_base.scss */
 img {
   max-width: 100%;
   vertical-align: middle;
 }
 
-/* line 61, ../../../sass/base/_base.scss */
+/* line 59, ../../../sass/base/_base.scss */
 h3 {
   font-size: inherit;
 }
 
-/* line 65, ../../../sass/base/_base.scss */
+/* line 63, ../../../sass/base/_base.scss */
 html {
   font-size: 62.5%;
 }
 
-/* line 69, ../../../sass/base/_base.scss */
+/* line 67, ../../../sass/base/_base.scss */
 body {
   font-size: 1.6rem;
   line-height: 1.5;
@@ -488,7 +488,7 @@ body {
   background-color: white;
 }
 
-/* line 77, ../../../sass/base/_base.scss */
+/* line 75, ../../../sass/base/_base.scss */
 blockquote {
   font-style: italic;
 }
@@ -496,6 +496,148 @@ blockquote {
 /* line 7, ../../../sass/objects/_lists.scss */
 .listInline > li {
   display: inline-block;
+}
+
+/* line 8, ../../../sass/components/_header.scss */
+.header {
+  border-bottom: 10px solid #60646d;
+}
+@media only screen and (max-width: 767px) {
+  /* line 8, ../../../sass/components/_header.scss */
+  .header {
+    border-bottom-width: 5px;
+  }
+}
+
+/* line 16, ../../../sass/components/_header.scss */
+.header-logo {
+  font-size: 4.8rem;
+  color: #60646d;
+  float: left;
+}
+@media only screen and (max-width: 767px) {
+  /* line 16, ../../../sass/components/_header.scss */
+  .header-logo {
+    font-size: 2.4rem;
+  }
+}
+
+/* line 26, ../../../sass/components/_header.scss */
+.header-nav {
+  float: right;
+}
+
+/* line 30, ../../../sass/components/_header.scss */
+.header-nav-link {
+  font-size: 1.8rem;
+  line-height: 4;
+  color: #60646d;
+  margin-left: 24px;
+}
+@media only screen and (max-width: 767px) {
+  /* line 30, ../../../sass/components/_header.scss */
+  .header-nav-link {
+    line-height: 2;
+  }
+}
+/* line 40, ../../../sass/components/_header.scss */
+.header-nav-link:first-child {
+  margin-left: 0;
+}
+
+/* line 8, ../../../sass/components/_footer.scss */
+.footer {
+  color: #fffff7;
+}
+
+/* line 12, ../../../sass/components/_footer.scss */
+.footer-copyright {
+  text-align: center;
+}
+
+/* line 9, ../../../sass/components/_links-list.scss */
+.linksList {
+  box-sizing: border-box;
+}
+/* line 15, ../../../sass/base/mixins/_clearfix.scss */
+.linksList:before, .linksList:after {
+  content: " ";
+  display: table;
+}
+/* line 19, ../../../sass/base/mixins/_clearfix.scss */
+.linksList:after {
+  clear: both;
+}
+
+@media only screen and (max-width: 767px) {
+  /* line 13, ../../../sass/components/_links-list.scss */
+  .linksList-items {
+    float: left;
+    width: 100%;
+    margin-left: 2.29885%;
+    box-sizing: border-box;
+    margin-left: 0;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  /* line 13, ../../../sass/components/_links-list.scss */
+  .linksList-items {
+    float: left;
+    width: 48.85057%;
+    margin-left: 2.29885%;
+    box-sizing: border-box;
+  }
+  /* line 19, ../../../sass/base/mixins/_grid.scss */
+  .linksList-items:nth-of-type(odd) {
+    margin-left: 0;
+  }
+}
+@media only screen and (min-width: 992px) {
+  /* line 13, ../../../sass/components/_links-list.scss */
+  .linksList-items {
+    float: left;
+    width: 31.80077%;
+    margin-left: 2.29885%;
+    box-sizing: border-box;
+  }
+  /* line 25, ../../../sass/base/mixins/_grid.scss */
+  .linksList-items:first-child {
+    margin-left: 0;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  /* line 27, ../../../sass/components/_links-list.scss */
+  .linksList-items--posts {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+  /* line 32, ../../../sass/components/_links-list.scss */
+  .linksList-items--posts:first-child {
+    padding-left: 0;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  /* line 38, ../../../sass/components/_links-list.scss */
+  .linksList-items--social {
+    text-align: right;
+  }
+}
+
+/* line 44, ../../../sass/components/_links-list.scss */
+.linksList-item {
+  border-bottom: 1px solid rgba(153, 153, 153, 0.8);
+  padding-top: 24px;
+  padding-bottom: 12px;
+}
+
+/* line 50, ../../../sass/components/_links-list.scss */
+.linksList-link {
+  color: #fffff7;
+  overflow: hidden;
+  display: inline-block;
+  height: 48px;
 }
 
 /* line 6, ../../../sass/utilities/_colours.scss */
@@ -600,7 +742,7 @@ blockquote {
 
 /* line 5, ../../../sass/utilities/_social.scss */
 .social {
-  background-image: url('../../../images/social.png');
+  background-image: url('../../../images/social.png?1408391821');
   background-repeat: no-repeat;
   height: 32px;
   width: 32px;
@@ -660,20 +802,34 @@ blockquote {
   display: table-footer-group;
 }
 
+/* line 6, ../../../sass/utilities/_grid.scss */
+.layoutContainer {
+  max-width: 1000px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+/* line 14, ../../../sass/utilities/_grid.scss */
+.layoutContainer--visible {
+  overflow: visible;
+}
+
 @media only screen and (max-width: 767px) {
-  /* line 24, ../../../sass/pages/home/home.scss */
+  /* line 31, ../../../sass/pages/home/home.scss */
   body {
     font-size: 1.6rem;
   }
 }
 
-/* line 30, ../../../sass/pages/home/home.scss */
+/* line 37, ../../../sass/pages/home/home.scss */
 .pageTitle {
   background-color: #83d6de;
   position: relative;
 }
 
-/* line 35, ../../../sass/pages/home/home.scss */
+/* line 42, ../../../sass/pages/home/home.scss */
 .pageTitle-text {
   font-size: 6rem;
   line-height: 1.5;
@@ -686,17 +842,17 @@ blockquote {
   display: block;
 }
 @media only screen and (max-width: 767px) {
-  /* line 35, ../../../sass/pages/home/home.scss */
+  /* line 42, ../../../sass/pages/home/home.scss */
   .pageTitle-text {
     font-size: 4.8rem;
   }
 }
 
-/* line 51, ../../../sass/pages/home/home.scss */
+/* line 58, ../../../sass/pages/home/home.scss */
 .triangle {
   position: relative;
 }
-/* line 54, ../../../sass/pages/home/home.scss */
+/* line 61, ../../../sass/pages/home/home.scss */
 .triangle:after {
   content: "";
   position: absolute;
@@ -708,19 +864,19 @@ blockquote {
   z-index: 1;
 }
 @media only screen and (max-width: 767px) {
-  /* line 54, ../../../sass/pages/home/home.scss */
+  /* line 61, ../../../sass/pages/home/home.scss */
   .triangle:after {
     border-width: 18px 18px 0;
     bottom: -18px;
   }
 }
 
-/* line 71, ../../../sass/pages/home/home.scss */
+/* line 78, ../../../sass/pages/home/home.scss */
 .profile {
   position: relative;
 }
 
-/* line 75, ../../../sass/pages/home/home.scss */
+/* line 82, ../../../sass/pages/home/home.scss */
 .profile-image {
   height: 140px;
   width: 140px;
@@ -733,14 +889,14 @@ blockquote {
   filter: grayscale(100%);
 }
 
-/* line 87, ../../../sass/pages/home/home.scss */
+/* line 94, ../../../sass/pages/home/home.scss */
 .profile-desc {
   color: #999999;
   padding-bottom: 24px;
   padding-top: 24px;
 }
 
-/* line 93, ../../../sass/pages/home/home.scss */
+/* line 100, ../../../sass/pages/home/home.scss */
 .intro-desc {
   font-size: 5rem;
   line-height: 1.5;
@@ -748,188 +904,32 @@ blockquote {
   margin-top: 24px;
 }
 @media only screen and (max-width: 767px) {
-  /* line 93, ../../../sass/pages/home/home.scss */
+  /* line 100, ../../../sass/pages/home/home.scss */
   .intro-desc {
     font-size: 2.68rem;
   }
 }
 
-/* line 104, ../../../sass/pages/home/home.scss */
+/* line 111, ../../../sass/pages/home/home.scss */
 .intro-block {
   display: block;
   padding-left: 5px;
 }
 
-/* line 110, ../../../sass/pages/home/home.scss */
+/* line 117, ../../../sass/pages/home/home.scss */
 .intro-link,
 .link {
   text-decoration: underline;
   color: #83d6de;
 }
 
-/* line 115, ../../../sass/pages/home/home.scss */
-.header {
-  border-bottom: 10px solid #60646d;
-}
-@media only screen and (max-width: 767px) {
-  /* line 115, ../../../sass/pages/home/home.scss */
-  .header {
-    border-bottom-width: 5px;
-  }
-}
-
-/* line 123, ../../../sass/pages/home/home.scss */
-.header-logo {
-  font-size: 4.8rem;
-  color: #60646d;
-  float: left;
-}
-@media only screen and (max-width: 767px) {
-  /* line 123, ../../../sass/pages/home/home.scss */
-  .header-logo {
-    font-size: 2.4rem;
-  }
-}
-
-/* line 133, ../../../sass/pages/home/home.scss */
-.header-nav {
-  float: right;
-}
-
-/* line 137, ../../../sass/pages/home/home.scss */
-.header-nav-link {
-  font-size: 1.8rem;
-  line-height: 4;
-  color: #60646d;
-  margin-left: 24px;
-}
-@media only screen and (max-width: 767px) {
-  /* line 137, ../../../sass/pages/home/home.scss */
-  .header-nav-link {
-    line-height: 2;
-  }
-}
-/* line 147, ../../../sass/pages/home/home.scss */
-.header-nav-link:first-child {
-  margin-left: 0;
-}
-
-/* line 152, ../../../sass/pages/home/home.scss */
-.footer {
-  color: #fffff7;
-}
-
-/* line 156, ../../../sass/pages/home/home.scss */
-.footer-copyright {
-  text-align: center;
-}
-
-/* line 160, ../../../sass/pages/home/home.scss */
-.layoutContainer {
-  max-width: 1000px;
-  margin: 0 auto;
-  overflow: hidden;
-  padding-left: 12px;
-  padding-right: 12px;
-}
-
-/* line 168, ../../../sass/pages/home/home.scss */
-.layoutContainer--visible {
-  overflow: visible;
-}
-
-/* line 172, ../../../sass/pages/home/home.scss */
-.linksList {
-  box-sizing: border-box;
-}
-/* line 15, ../../../sass/base/mixins/_clearfix.scss */
-.linksList:before, .linksList:after {
-  content: " ";
-  display: table;
-}
-/* line 19, ../../../sass/base/mixins/_clearfix.scss */
-.linksList:after {
-  clear: both;
-}
-
-@media only screen and (max-width: 767px) {
-  /* line 176, ../../../sass/pages/home/home.scss */
-  .linksList-items {
-    float: left;
-    width: 100%;
-    margin-left: 2.29885%;
-    box-sizing: border-box;
-    margin-left: 0;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  /* line 176, ../../../sass/pages/home/home.scss */
-  .linksList-items {
-    float: left;
-    width: 48.85057%;
-    margin-left: 2.29885%;
-    box-sizing: border-box;
-  }
-  /* line 19, ../../../sass/base/mixins/_grid.scss */
-  .linksList-items:nth-of-type(odd) {
-    margin-left: 0;
-  }
-}
-@media only screen and (min-width: 992px) {
-  /* line 176, ../../../sass/pages/home/home.scss */
-  .linksList-items {
-    float: left;
-    width: 31.80077%;
-    margin-left: 2.29885%;
-    box-sizing: border-box;
-  }
-  /* line 25, ../../../sass/base/mixins/_grid.scss */
-  .linksList-items:first-child {
-    margin-left: 0;
-  }
-}
-
-@media only screen and (min-width: 992px) {
-  /* line 190, ../../../sass/pages/home/home.scss */
-  .linksList-items--posts {
-    padding-left: 12px;
-    padding-right: 12px;
-  }
-  /* line 195, ../../../sass/pages/home/home.scss */
-  .linksList-items--posts:first-child {
-    padding-left: 0;
-  }
-}
-
-@media only screen and (min-width: 992px) {
-  /* line 201, ../../../sass/pages/home/home.scss */
-  .linksList-items--social {
-    text-align: right;
-  }
-}
-
-/* line 207, ../../../sass/pages/home/home.scss */
-.linksList-item {
-  border-bottom: 1px solid rgba(153, 153, 153, 0.8);
-  padding-top: 24px;
-  padding-bottom: 12px;
-}
-
-/* line 213, ../../../sass/pages/home/home.scss */
-.linksList-link {
-  color: #fffff7;
-  overflow: hidden;
-  display: inline-block;
-  height: 48px;
-}
-
-/* line 220, ../../../sass/pages/home/home.scss */
+/* line 122, ../../../sass/pages/home/home.scss */
 .pageSection {
   padding-top: 24px;
   padding-bottom: 72px;
 }
 
-/* line 225, ../../../sass/pages/home/home.scss */
+/* line 127, ../../../sass/pages/home/home.scss */
 .pageSection-title {
   color: #999999;
   font-size: 4.8rem;
@@ -938,14 +938,14 @@ blockquote {
   text-align: center;
 }
 
-/* line 233, ../../../sass/pages/home/home.scss */
+/* line 135, ../../../sass/pages/home/home.scss */
 .articleThumb {
   background-color: white;
   border-radius: 3px;
   margin-bottom: 24px;
 }
 @media only screen and (max-width: 767px) {
-  /* line 233, ../../../sass/pages/home/home.scss */
+  /* line 135, ../../../sass/pages/home/home.scss */
   .articleThumb {
     float: left;
     width: 48.85057%;
@@ -958,7 +958,7 @@ blockquote {
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  /* line 233, ../../../sass/pages/home/home.scss */
+  /* line 135, ../../../sass/pages/home/home.scss */
   .articleThumb {
     float: left;
     width: 23.27586%;
@@ -972,7 +972,7 @@ blockquote {
   }
 }
 @media only screen and (min-width: 992px) {
-  /* line 233, ../../../sass/pages/home/home.scss */
+  /* line 135, ../../../sass/pages/home/home.scss */
   .articleThumb {
     float: left;
     width: 23.27586%;
@@ -986,7 +986,7 @@ blockquote {
   }
 }
 
-/* line 252, ../../../sass/pages/home/home.scss */
+/* line 154, ../../../sass/pages/home/home.scss */
 .articleThumb-title {
   color: #999999;
   padding-left: 5px;
@@ -996,7 +996,7 @@ blockquote {
   overflow: hidden;
 }
 
-/* line 262, ../../../sass/pages/home/home.scss */
+/* line 164, ../../../sass/pages/home/home.scss */
 .articleThumb-date,
 .articleThumb-category {
   font-size: 1.4rem;
@@ -1004,19 +1004,19 @@ blockquote {
   color: #cccccc;
 }
 
-/* line 268, ../../../sass/pages/home/home.scss */
+/* line 170, ../../../sass/pages/home/home.scss */
 .articleThumb-meta {
   padding-bottom: 5px;
   overflow: hidden;
 }
 
-/* line 273, ../../../sass/pages/home/home.scss */
+/* line 175, ../../../sass/pages/home/home.scss */
 .articleThumb-date {
   float: left;
   padding-left: 5px;
 }
 @media only screen and (max-width: 767px) {
-  /* line 273, ../../../sass/pages/home/home.scss */
+  /* line 175, ../../../sass/pages/home/home.scss */
   .articleThumb-date {
     position: absolute !important;
     overflow: hidden !important;
@@ -1028,13 +1028,13 @@ blockquote {
   }
 }
 
-/* line 282, ../../../sass/pages/home/home.scss */
+/* line 184, ../../../sass/pages/home/home.scss */
 .articleThumb-category {
   float: right;
   padding-right: 5px;
 }
 
-/* line 287, ../../../sass/pages/home/home.scss */
+/* line 189, ../../../sass/pages/home/home.scss */
 .articleThumb-image {
   border-radius: 3px;
 }
