--- a/src/IAmBacon/IAmBacon/Content/sass/pages/home/home.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/pages/home/home.scss
@@ -10,6 +10,12 @@
 // ------------------------
 @import "../../objects/lists";
 
+// Components
+// ------------------------
+@import "../../components/header";
+@import "../../components/footer";
+@import "../../components/links-list";
+
 // Utilities
 // ------------------------
 @import "../../utilities/colours";
@@ -18,6 +24,7 @@
 @import "../../utilities/social";
 @import "../../utilities/margin";
 @import "../../utilities/tables";
+@import "../../utilities/grid";
 
 // Page
 // ------------------------
@@ -110,111 +117,6 @@ body {
 .link {
 	text-decoration: underline;
 	color: $cursive;
-}
-
-.header {
-	border-bottom: 10px solid $ill-stay-here;
-
-	@include respond-to(extra-small) {
-		border-bottom-width: 5px;
-	}
-}
-
-.header-logo {
-	@include font-size($h2-font-size);
-	color: $ill-stay-here;
-	float: left;
-
-	@include respond-to(extra-small) {
-		@include font-size($h3-font-size);
-	}
-}
-
-.header-nav {
-	float: right;
-}
-
-.header-nav-link {
-	@include font-size(18px); // Todo this isn't a standard size.  Need to sort.
-	line-height: 4; // magic number need to sort.
-	color: $ill-stay-here;
-	margin-left: $base-line-height;
-
-	@include respond-to(extra-small) {
-		line-height: 2;
-	}
-
-	&:first-child {
-		margin-left: 0;
-	}
-}
-
-.footer {
-	color: $marshmallow;
-}
-
-.footer-copyright {
-	text-align: center;
-}
-
-.layoutContainer {
-	max-width: 1000px;
-	margin: 0 auto;
-	overflow: hidden;
-	padding-left: $base-line-height * 0.5;
-	padding-right: $base-line-height * 0.5;
-}
-
-.layoutContainer--visible {
-	overflow: visible;
-}
-
-.linksList {
-	@include container;
-}
-
-.linksList-items {
-	@include respond-to(extra-small) {
-		@include column(12);
-	}
-
-	@include respond-to(small) {
-		@include column(6);
-	}
-
-	@include respond-to(medium-large) {
-		@include column(4);
-	}
-}
-
-.linksList-items--posts {
-	@include respond-to(medium-large) {
-		padding-left: $base-line-height * 0.5;
-		padding-right: $base-line-height * 0.5;
-
-		&:first-child {
-			padding-left: 0;
-		}
-	}
-}
-
-.linksList-items--social {
-	@include respond-to(medium-large) {
-		text-align: right;
-	}
-}
-
-.linksList-item {
-	border-bottom: 1px solid rgba($nobel, .8);
-	padding-top: $base-line-height;
-	padding-bottom: $base-line-height * 0.5; // TODO: Should this be a utility or mixin (padding)?
-}
-
-.linksList-link {
-	color: $marshmallow;
-	overflow: hidden;
-	display: inline-block;
-	height: $base-line-height * 2;
 }
 
 .pageSection {
