--- a/src/IAmBacon/IAmBacon/Views/Post/Category.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Category.cshtml
@@ -1,7 +1,4 @@
 ﻿@model IAmBacon.ViewModels.PostsViewModel
-@{
-    Layout = "~/Views/Shared/_PostLayout.cshtml";
-}
 @section css
 {
     @Styles.Render("~/bundles/categoryCss")
@@ -10,7 +7,8 @@
 {
     @Styles.Render("~/bundles/categoryIeCss")
 }
+<div class="layoutContainer">
+    <h1>Recent posts for category '@Model.Title'</h1>
 
-<h1>Recent posts for category '@Model.Title'</h1>
-
-@Html.DisplayFor(x => x.Posts)
+    @Html.DisplayFor(x => x.Posts)
+</div>
