--- a/src/IAmBacon/IAmBacon/Views/Post/Index.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Index.cshtml
@@ -1,7 +1,4 @@
 ﻿@model IAmBacon.ViewModels.PostsViewModel
-@{
-    this.Layout = "~/Views/Shared/_PostLayout.cshtml";
-}
 @section meta
 {
     <meta name="description" content="Blog site for Colin Bacon - Web Developer.  Push button, receive blog." />
@@ -14,9 +11,11 @@
 {
     @Styles.Render("~/bundles/landingpageIeCss")
 }
+<div class="layoutContainer">
+    <h1 class="page-title">@Html.ActionLink("I am Blog.", "Index", "Post")</h1>
 
-<h1 class="page-title">@Html.ActionLink("I am Blog.", "Index", "Post")</h1>
+    <h2>Recent Posts</h2>
 
-<h2>Recent Posts</h2>
+    @Html.DisplayFor(x => x.Posts)    
+</div>
 
-@Html.DisplayFor(x => x.Posts)
