--- a/src/IAmBacon/IAmBacon/Areas/Admin/Views/Category/Create.cshtml
+++ b/src/IAmBacon/IAmBacon/Areas/Admin/Views/Category/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.Optimization
-@model IAmBacon.Model.Entities.Category
+﻿@model IAmBacon.Model.Entities.Category
 @{
     ViewBag.Title = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -27,6 +26,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-@section Scripts {
-    @*@Scripts.Render("~/bundles/jqueryval")*@
-}
