--- a/src/IAmBacon/IAmBacon/Areas/Admin/Views/Tag/Create.cshtml
+++ b/src/IAmBacon/IAmBacon/Areas/Admin/Views/Tag/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.Optimization
-@model IAmBacon.Model.Entities.Tag
+﻿@model IAmBacon.Model.Entities.Tag
 @{
     ViewBag.Title = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -28,6 +27,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-@section Scripts {
-    @*@Scripts.Render("~/bundles/jqueryval")*@
-}
