--- a/src/IAmBacon/IAmBacon/Areas/Admin/Views/Tag/Edit.cshtml
+++ b/src/IAmBacon/IAmBacon/Areas/Admin/Views/Tag/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.Optimization
-@model IAmBacon.Model.Entities.Tag
+﻿@model IAmBacon.Model.Entities.Tag
 
 @{
     ViewBag.Title = "Edit";
@@ -34,7 +33,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
