Added page title component to blog landing page.

--- a/src/IAmBacon/IAmBacon/Content/sass/pages/home/home.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/pages/home/home.scss
@@ -15,6 +15,7 @@
 @import "../../components/header";
 @import "../../components/footer";
 @import "../../components/links-list";
+@import "../../components/page-title";
 
 // Utilities
 // ------------------------
@@ -31,47 +32,6 @@
 body {
 	@include respond-to(extra-small) {
 		@include font-size($h4-font-size);
-	}
-}
-
-.pageTitle {
-	background-color: $cursive;
-	position: relative;
-}
-
-.pageTitle-text {
-	@include font-size($h1-font-size);
-	@include line-height-proportional;
-	color: $marshmallow;
-	font-weight: 700;
-	margin: 0;
-	padding-top: $base-line-height;
-	padding-bottom: $base-line-height;
-	text-align: center;
-	display: block;
-
-	@include respond-to(extra-small) {
-		@include font-size($h2-font-size);
-	}
-}
-
-.triangle {
-	position: relative;
-
-	&:after {
-		content: "";
-		position: absolute;
-		bottom: -24px;
-		left: 80px;
-		border-width: 24px 24px 0;
-		border-style: solid;
-		border-color: $cursive transparent;
-		z-index: 1;
-
-		@include respond-to(extra-small) {
-			border-width: 18px 18px 0;
-			bottom: -18px;
-		}
 	}
 }
 
