--- a/src/IAmBacon/IAmBacon/Views/Home/Home.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Home/Home.cshtml
@@ -12,8 +12,8 @@
 
 }
 <div class="pageTitle">
-    <h1 class="layoutContainer layoutContainer--visible triangle">
-        <span class="pageTitle-text">Hi I'm Colin</span>
+    <h1 class="layoutContainer layoutContainer--visible has-triangle">
+        <span class="pageTitle-headline">Hi I'm Colin</span>
     </h1>
 </div>
 <div class="cloudyBlue">
