--- a/src/IAmBacon/IAmBacon/Content/sass/partials/_base.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/partials/_base.scss
@@ -17,7 +17,7 @@ $base-margin: $base-padding;
 $h1-font-size-mobile: 1.5 * $base-font-size;
 $h2-font-size-mobile: 1.25 * $base-font-size;
 
-$h1-font-size: 2.25 * $base-font-size;
+$h1-font-size: 3.75 * $base-font-size !default; //60px
 $h2-font-size: 3 * $base-font-size;
 
 $blockquote-font-size: 1.25 * $base-font-size;
