--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/styleguide/styleguide.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/styleguide/styleguide.css
@@ -446,9 +446,10 @@ ol {
   padding: 0;
 }
 
-/* line 44, ../../../sass/base/_base.scss */
+/* line 45, ../../../sass/base/_base.scss */
 ul,
 ol,
+h1,
 h2,
 h3,
 p,
@@ -457,29 +458,29 @@ dd {
   margin: 0;
 }
 
-/* line 48, ../../../sass/base/_base.scss */
+/* line 49, ../../../sass/base/_base.scss */
 a {
   text-decoration: none;
   color: inherit;
 }
 
-/* line 54, ../../../sass/base/_base.scss */
+/* line 55, ../../../sass/base/_base.scss */
 img {
   max-width: 100%;
   vertical-align: middle;
 }
 
-/* line 59, ../../../sass/base/_base.scss */
+/* line 60, ../../../sass/base/_base.scss */
 h3 {
   font-size: inherit;
 }
 
-/* line 63, ../../../sass/base/_base.scss */
+/* line 64, ../../../sass/base/_base.scss */
 html {
   font-size: 62.5%;
 }
 
-/* line 67, ../../../sass/base/_base.scss */
+/* line 68, ../../../sass/base/_base.scss */
 body {
   font-size: 1.6rem;
   line-height: 1.5;
@@ -488,7 +489,7 @@ body {
   background-color: white;
 }
 
-/* line 75, ../../../sass/base/_base.scss */
+/* line 76, ../../../sass/base/_base.scss */
 blockquote {
   font-style: italic;
 }
