Added mobile font-size for page title subline.

--- a/src/IAmBacon/IAmBacon/Content/sass/components/_page-title.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/components/_page-title.scss
@@ -33,6 +33,10 @@
     padding-bottom: $base-line-height;
     text-align: center;
     color: $white;
+
+    @include respond-to(extra-small) {
+		@include font-size($h4-font-size);
+	}
 }
 
 // State
