--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home-ie.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home-ie.css
@@ -675,12 +675,18 @@ blockquote {
   text-align: center;
   color: white;
 }
+@media only screen and (max-width: 767px) {
+  /* line 29, ../../../sass/components/_page-title.scss */
+  .pageTitle-subline {
+    font-size: 16px;
+  }
+}
 
-/* line 39, ../../../sass/components/_page-title.scss */
+/* line 43, ../../../sass/components/_page-title.scss */
 .has-triangle {
   position: relative;
 }
-/* line 42, ../../../sass/components/_page-title.scss */
+/* line 46, ../../../sass/components/_page-title.scss */
 .has-triangle:after {
   content: "";
   position: absolute;
@@ -692,7 +698,7 @@ blockquote {
   z-index: 1;
 }
 @media only screen and (max-width: 767px) {
-  /* line 42, ../../../sass/components/_page-title.scss */
+  /* line 46, ../../../sass/components/_page-title.scss */
   .has-triangle:after {
     border-width: 18px 18px 0;
     bottom: -18px;
